새로운 태그 체계 및 점수 산정 로직 구현
